--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -13,15 +13,22 @@ html, body {
     scroll-behavior: smooth;
 }
 
+img {
+    max-width: 100%;
+    height: auto;
+}
+
 /* Content Navegation */
 
 #navegation {
     display: flex;
     align-items: center;
     max-width: 100%;
-    height: 15vh;
+    height: 10vh;
     background-color: var(--color-main);
     border-bottom: 1px solid rgb(32, 32, 3);
+    position: sticky;
+    top: 0;
 }
 
 /* Title principal */
@@ -35,10 +42,8 @@ html, body {
 
 /* Efect menu */
 
-ul.show {
-    left: 0;
-    transition: 1s;
-    opacity: 1;
+ul.is-actives {
+    transform: translate(0, 0);
 }
 
 /* Menu */
@@ -52,11 +57,11 @@ ul.show {
     width: 100vw;
     height: 100vh;
     z-index: 1;
-    left: -100vw;
+    bottom: 0;
     top: 0;
-    opacity: 0;
     background-color: rgba(32, 32, 3, 0.623);
-    transition: opacity 1s;
+    transition: transform 0.5s ease-in-out;
+    transform: translate(-100%, 0);
 }
 
 .list li {
@@ -74,7 +79,8 @@ ul.show {
 .list li:hover {
     background-color: var(--color-main);
     color: rgb(32, 32, 3);
-    transition: background-color 1s;
+    transition: background-color 1s ease;
+    transform: scale(1.1);
 }
 
 .list li a {
@@ -96,7 +102,7 @@ ul.show {
 
 .tam {
     max-width: 100%;
-    height: 85vh;
+    height: 90vh;
 }
 
 .tam h2 {
