--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -123,7 +123,7 @@ ul.is-actives {
 .tam h2 {
     max-width: 100%;
     text-align: center;
-    height: 10%;
+    height: 5%;
 }
 
 /* Section 1 */
@@ -135,7 +135,7 @@ ul.is-actives {
 .alarmaRelog {
     display: grid;
     width: 100%;
-    height: 80%;
+    height: 90%;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     grid-gap: 2rem;
     align-items: center;
@@ -154,6 +154,12 @@ ul.is-actives {
     background-color: #333333;
 }
 
+@media screen and (max-width: 768px) {
+    .elements {
+        width: 85%;
+        height: 15rem;
+    }
+}
 
 
 .btn {
@@ -171,7 +177,7 @@ ul.is-actives {
 
 
 #toLocal {
-    font: 1.5rem var(--font-family);
+    font: 1rem var(--font-family);
     color: var(--color-text);
     margin: .3rem;
 }
