--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -123,7 +123,7 @@ ul.is-actives {
 .tam h2 {
     max-width: 100%;
     text-align: center;
-    height: 20%;
+    height: 10%;
 }
 
 /* Section 1 */
@@ -135,7 +135,7 @@ ul.is-actives {
 .alarmaRelog {
     display: grid;
     width: 100%;
-    height: 60%;
+    height: 80%;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     grid-gap: 2rem;
     align-items: center;
@@ -166,4 +166,17 @@ ul.is-actives {
     cursor: pointer;
     background-color: var(--color-main);
     color: var(--color-text);
+}
+
+
+
+#toLocal {
+    font: 1.5rem var(--font-family);
+    color: var(--color-text);
+    margin: .3rem;
+}
+
+div.date  {
+    border-radius: .3rem;
+    border: 1px solid var(--color-main);
 }
