--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -130,12 +130,13 @@ ul.is-actives {
 
 #first {
     justify-content: space-evenly;
+    height: 90vh;
 }
 
 .alarmaRelog {
     display: grid;
     width: 100%;
-    height: 90%;
+    height: 95%;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     grid-gap: 2rem;
     align-items: center;
@@ -148,7 +149,7 @@ ul.is-actives {
     align-items: center;
     justify-content: space-evenly;
     width: 80%;
-    height: 14rem;
+    height: 15rem;
     text-align: center;
     border-radius: .3rem;
     background-color: #333333;
@@ -157,7 +158,7 @@ ul.is-actives {
 @media screen and (max-width: 768px) {
     .elements {
         width: 85%;
-        height: 15rem;
+        height: 10rem;
     }
 }
 
