--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -112,7 +112,7 @@ ul.is-actives {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
     max-width: 80%;
     margin: 0 auto;
     height: 90vh;
@@ -186,4 +186,22 @@ ul.is-actives {
 div.date  {
     border-radius: .3rem;
     border: 1px solid var(--color-main);
+}
+
+/* Section Two Challenge */
+
+#background {
+    height: 70%;
+    background-color: var(--color-secondary);
+    width: 80%;
+    border: 1px solid white;
+    border-radius: .5rem;
+}
+
+#background div {
+    background-color: var(--color-menu);
+    width: 40px;
+    height: 45px;
+    border-radius: 50%;
+    max-width: 100%;
 }
