--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -195,18 +195,17 @@ div.date  {
     background-color: var(--color-secondary);
     width: 80%;
     border-radius: .5rem;
-}
-
-div.hoverHere {
     border: 1px solid white;
+    
 }
+  
 
 .bull {
-    display: flex;
     background-color: var(--color-menu);
+    width: 100%;
+    height: 100%;
     width: 40px;
     height: 45px;
     border-radius: 50%;
-    max-width: 100%;
-    max-height: 100%;
-}
+    margin: .5rem;
+}   
