--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -208,4 +208,48 @@ div.date  {
     height: 45px;
     border-radius: 50%;
     margin: .5rem;
-}   
+}  
+
+
+.down {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    background-color: var(--color-main);
+    width: 70px;
+    height: 71px;
+    border-radius: 70%;
+    border: 1px solid rgb(32, 32, 3);
+    cursor: pointer;
+    position: fixed;
+    bottom: 1.5rem;
+    right: 7rem;
+    z-index: 997;
+}
+
+.down span {
+    font-size: 2rem;
+}
+
+nav.nav-down {
+    /* From https://css.glass */
+    background: rgba(207, 170, 170, 0);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(2.4px);
+    -webkit-backdrop-filter: blur(2.4px);
+    border: 1px solid rgba(207, 170, 170, 0.2);
+}
+
+@media screen and (max-width: 900px) {
+    .down {
+        width: 50px;
+        height: 50px;
+    }
+
+    .down span {
+        font-size: 1.5rem;
+    }
+}
+    
