--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -25,7 +25,7 @@ img {
 
 /* Content Navegation */
 
-#navegation {
+.navegations {
     display: flex;
     align-items: center;
     max-width: 100%;
@@ -164,8 +164,8 @@ ul.is-actives {
 
 
 .btn {
-    width:6rem;
-    height:2.5rem;
+    width: 6rem;
+    height: 2.5rem;
     border: 1px solid black;
     border-radius: .3rem;
     padding: .3rem;
@@ -217,35 +217,47 @@ div.date  {
     align-items: center;
     justify-content: space-evenly;
     background-color: var(--color-main);
-    width: 70px;
-    height: 71px;
+    width: 4.3rem;
+    height: 4.3rem;
     border-radius: 70%;
     border: 1px solid rgb(32, 32, 3);
     cursor: pointer;
     position: fixed;
     bottom: 1.5rem;
-    right: 7rem;
+    right: calc(5.5rem + 1vw);
     z-index: 997;
+    transition: opacity 0.5s ease-in-out;
+    visibility: hidden;
+    opacity: 0;
 }
 
 .down span {
     font-size: 2rem;
 }
 
-nav.nav-down {
+/* Styles Hidden Nav and Btn Scroll */
+
+.nav-down {
     /* From https://css.glass */
     background: rgba(207, 170, 170, 0);
-    border-radius: 16px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(2.4px);
     -webkit-backdrop-filter: blur(2.4px);
-    border: 1px solid rgba(207, 170, 170, 0.2);
+    transition: height 0.9s ease-in-out;
+    height: 7vh;
+}
+
+.hidden {
+    visibility: visible;
+    opacity: 1;
+    transition: opacity 0.5s ease-in-out;
 }
 
 @media screen and (max-width: 900px) {
     .down {
-        width: 50px;
-        height: 50px;
+        width: 3.1rem;
+        height: 3.1rem;
+        right: calc(6rem + 1vw);
     }
 
     .down span {
