--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -8,7 +8,6 @@
     --color-text: #fff;
     --background-div-dark: #333333;
 
-
     /* Theme Light */
 
     --background-body-light: #fcf9ee;
@@ -17,18 +16,16 @@
 }
 
 
-* {
+html, body {
+    width: 100%;
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-}
-
-html, body {
-    width: 100%;
     font-family: var(--font-family);
     scroll-behavior: smooth;
-    color: var(--color-text);
 }
+
+/* Theme Styles */
 
 body.dark-theme {
     background-color: var(--background-body);
@@ -42,29 +39,39 @@ body.dark-theme {
 div.dark-background-others {
     background-color: var(--background-div-dark);
 }
-
 @media (prefers-color-scheme: dark) {
     body {
         background-color: var(--background-body);
+        color: var(--color-text);
     }
-
+    
+    .elements {
+        background-color: var(--background-div-dark);
+    }
+    
     body.light-theme {
         background-color: var(--background-body-light);
         color: var(--color-text-light);
     }
-
-    .elements {
-        background-color: var(--background-div-dark);
-    }
-
+    
     div.light-background-others {
         background-color: var(--background-div-light);
     }
-
+    
     .light-theme-others {
         color: var(--color-text);
     }
 }
+
+
+@media (prefers-color-scheme: light) {
+    body {
+        background-color: var(--background-body-light);
+        color: var(--color-text-light);
+    }    
+}
+
+/* End Theme Styles */
 
 img {
     max-width: 100%;
