--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -167,7 +167,8 @@ body.menu {
     justify-content: space-evenly;
     max-width: 80%;
     margin: 0 auto;
-    height: 90vh;
+    height: 100vh;
+    padding-top: 8vh;
     z-index: 0;
     color: var(--color-text);
 }
@@ -219,11 +220,12 @@ body.menu {
 .btn {
     width: 6rem;
     height: 2.5rem;
-    border: 1px solid black;
+    border: .2px solid var(--color-text);
     border-radius: .3rem;
     padding: .3rem;
     font-size: .9rem;
     cursor: pointer;
+    color: var(--color-text);
     background-color: var(--color-main);
 }
 
@@ -246,7 +248,7 @@ div.date  {
     background-color: var(--color-secondary);
     width: 80%;
     border-radius: .5rem;
-    border: 1px solid white;
+    border: 1px solid var(--background-div);
 }
   
 
@@ -286,43 +288,39 @@ div.date  {
     font-size: 2rem;
 }
 
-/* Styles Hidden Nav and Btn Scroll */
-
-.nav-down {
-    /* From https://css.glass */
-    background: rgba(207, 170, 170, 0);
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(2.4px);
-    -webkit-backdrop-filter: blur(2.4px);
-    transition: height 0.9s ease-in-out;
-    height: 7vh;
+#form {
+    height: auto;
+    width: auto;
+    background-color: var(--background-div);
+    border-radius: .3rem;
+    border: 1px solid var(--background-div);
+    display: grid;
+    grid-template-columns: .3fr auto auto;
+    grid-gap: .5rem;
+    align-items: center;
+    justify-items: center;
+    padding: .5rem;
 }
 
-.hidden {
-    visibility: visible;
-    opacity: 1;
-    transition: opacity 0.5s ease-in-out;
+.dateData {
+    border-radius: .1rem;
+    border: 1px solid var(--background-div);
+    background-color: transparent;
 }
 
-.theme {
+.dateData:focus {
+    outline: none;
+}
+
+.content {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-evenly;
-    position: fixed;
-    bottom: 1.5rem;
-    left: 1.5rem;
-    background-color: var(--color-main);
-    width: 4.3rem;
-    height: 4.3rem;
-    border-radius: 70%;
-    border: 1px solid rgb(32, 32, 3);
-    z-index: 995;
+    justify-content: center;
+    height: 100%;
+    width: 100%;
 }
 
-.theme:hover {
-    cursor: pointer;
-}
 
 @media screen and (max-width: 900px) {
     .down {
