--- a/CSS/styleElements.css
+++ b/CSS/styleElements.css
@@ -35,3 +35,52 @@
 .theme:hover {
     cursor: pointer;
 }
+
+
+.formTest {
+    display: flex;
+    flex-direction: column;
+    border: 1px solid var(--color-text);
+    height: auto;
+    width: 30vw;
+    border-radius: 10px;
+    padding: 1rem;
+    overflow: clip;
+}
+
+.formTest label {
+    text-align: left;
+}
+
+.formTestInput {
+    display: grid;
+    grid-template-columns: .2fr auto;
+    grid-gap: 1rem;
+    align-items: center;
+    width: 100%;
+    height: 3rem;
+    border: 2px solid var(--color-main);
+    border-radius: 5px;
+    margin-bottom: 1rem;
+}
+
+.formTestInput input {
+    width: 80%;
+    height: 100%;
+    border: none;
+    background-color: transparent;
+    color: var(--color-text);
+    font-size: 1.2rem;
+}
+
+.formTestInput input:focus {
+    outline: none;
+}
+
+.ContentBtn {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    justify-items: center;
+    grid-gap: 1rem;
+}
