--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -297,7 +297,7 @@ div.date  {
     border-radius: .3rem;
     border: 1px solid var(--background-div);
     display: grid;
-    grid-template-columns: .3fr auto auto;
+    grid-template-columns: auto auto auto;
     grid-gap: .5rem;
     align-items: center;
     justify-items: center;
@@ -326,24 +326,7 @@ div.date  {
 }
 
 
-@media screen and (max-width: 900px) {
-    .down {
-        width: 3.1rem;
-        height: 3.1rem;
-        right: calc(6rem + 1vw);
-    }
 
-    .down span {
-        font-size: 1.5rem;
-    }
-
-    .theme {
-        width: 3.1rem;
-        height: 3.1rem;
-        bottom: 1rem;
-        left: .5rem;
-    }
-}
 
 
     
