Added and finished function navigator
Identify platform, browser and more

--- a/CSS/responsive.css
+++ b/CSS/responsive.css
@@ -28,4 +28,16 @@
     .formTest {
         width: 60vw;
     }
+
+    #userAgent {
+        height: 85vh;
+    }
+
+    .userAgent {
+        width: 100%
+    }
+
+    #six h2 {
+        display: none;
+    }
 }
