--- a/CSS/styleElements.css
+++ b/CSS/styleElements.css
@@ -96,7 +96,7 @@
     align-items: center;
     justify-content: center;
     height: 78vh;
-    justify-content: space-evenly;
+    justify-content: space-between;
 }
 
 .userAgent {
@@ -105,11 +105,15 @@
     padding: 1rem;
     overflow: clip;
     margin: 0 auto;
+    width: 90%;
 }
 
-.userAgentString {
+.userAgentString, .userAgentString p {
     margin: 0;
+    padding: 0;
 }
+
+
 
 .userAgentContent {
     display: grid;
