--- a/SRC/CSS/styleElements.css
+++ b/SRC/CSS/styleElements.css
@@ -189,3 +189,12 @@
     background-color: var(--color-text);
     color: var(--color-main);
 }
+
+.videIn {
+    height: 70%;
+}
+
+.videIn video {
+    width: 100%;
+    height: 100%;
+}
