--- a/SRC/CSS/styleElements.css
+++ b/SRC/CSS/styleElements.css
@@ -198,3 +198,50 @@
     width: 100%;
     height: 100%;
 }
+
+/* Form */
+
+.contact {
+    height: 65%;
+    width: 100%;
+}
+
+#formContact {
+    display: flex;
+    width:100%;
+    height: auto;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.form-group {
+    display:flex;
+    width: 80%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#label {
+    width: 100%;
+    text-align: left;
+}
+
+.form-group input, .form-group textarea {
+    width: 100%;
+    height: 2rem;
+    border-radius: 5px;
+}
+
+#btnSubmit {
+    margin: 2rem 0;
+    width: 5rem;
+    height: 2rem;
+    text-align: center;
+    background-color: var(--color-main);
+    color: var(--color-text);
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
