--- a/SRC/CSS/styleElements.css
+++ b/SRC/CSS/styleElements.css
@@ -232,6 +232,7 @@
     width: 100%;
     height: 2rem;
     border-radius: 5px;
+    font-family: var(--font-family);
 }
 
 #btnSubmit {
@@ -244,4 +245,16 @@
     border: none;
     border-radius: 5px;
     cursor: pointer;
+}
+
+.loader {
+    display: none;
+}
+
+.form-group [required]:valid {
+    border: thin solid #00ff00;
+}
+
+.form-group [required]:invalid {
+    border: thin solid #ff0000;
 }
