--- a/SRC/CSS/styleElements.css
+++ b/SRC/CSS/styleElements.css
@@ -293,3 +293,28 @@
         opacity: 1;
     }
 }
+
+/* Speech */
+
+.speech {
+    display: flex;
+    flex-direction: column;
+    min-height: 70%;
+    width: 100%;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.select-speech {
+    width: 80%;
+    height: 2rem;
+}
+
+.info-text {
+    width: 60%;
+}
+
+.speech button {
+    width: 5rem;
+    height: 2rem;
+}
