--- a/SRC/CSS/styleElements.css
+++ b/SRC/CSS/styleElements.css
@@ -121,7 +121,7 @@
 
 .filterform {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
     align-items: center;
     justify-content: center;
 }
